--- a/index.html
+++ b/index.html
@@ -3,8 +3,71 @@
 <head>
   <meta charset="UTF-8">
   <title>Calendar</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  
+  <table>
+    <thead>
+      <tr>
+        <th id="prev">&laquo;</th>
+        <th id="title" colspan="5">2020/05</th>
+        <th id="next">&raquo;</th>
+      </tr>
+      <tr>
+        <th>Sun</th>
+        <th>Mon</th>
+        <th>Tue</th>
+        <th>Wed</th>
+        <th>Thu</th>
+        <th>Fri</th>
+        <th>Sat</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td class="disabled">1</td>
+        <td class="disabled">1</td>
+        <td class="disabled">1</td>
+        <td>1</td>
+        <td>1</td>
+        <td>1</td>
+        <td>1</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>1</td>
+        <td>1</td>
+        <td>1</td>
+        <td>1</td>
+        <td>1</td>
+        <td>1</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>1</td>
+        <td>1</td>
+        <td>1</td>
+        <td>1</td>
+        <td>1</td>
+        <td>1</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td class="today">1</td>
+        <td>1</td>
+        <td>1</td>
+        <td>1</td>
+        <td class="disabled">1</td>
+        <td class="disabled">1</td>
+      </tr>
+    </tbody>
+    <tfoot>
+      <tr>
+        <td id="today" colspan="7">Today</td>
+      </tr>
+    </tfoot>
+  </table>
+
+  <script src="js/main.js"></script>
 </body>
 </html>
